transform publications added

--- a/constants/publications.bib
+++ b/constants/publications.bib
@@ -92,8 +92,7 @@ doi = {10.1109/MIC.2023.3333199}
 }
 
 @ARTICLE{10.18608/jla.2022.7415,
-  title     = "The curious case of centrality measures: A large-scale empirical
-               investigation",
+  title     = "The curious case of centrality measures: A large-scale empirical investigation",
   author    = "Saqr, Mohammed and López-Pernas, Sonsoles",
   journal   = "Journal of Learning Analytics",
   volume    =  9,
@@ -102,10 +101,8 @@ doi = {10.1109/MIC.2023.3333199}
   doi       =  {10.18608/jla.2022.7415}
 }
 @article{10.1109/ACCESS.2022.3157609,
-  title     = "Computing education research compiled: Keyword trends, building
-               blocks, creators, and dissemination",
-  author    = "Apiola, Mikko and Saqr, Mohammed and López-Pernas, Sonsoles and
-               Tedre, Matti",
+  title     = "Computing education research compiled: Keyword trends, building blocks, creators, and dissemination",
+  author    = "Apiola, Mikko and Saqr, Mohammed and López-Pernas, Sonsoles and Tedre, Matti",
   journal   = "IEEE Access",
   volume    =  10,
   pages     =  {27041--27068},
@@ -425,7 +422,7 @@ doi = {10.1109/MIC.2023.3333199}
   url          = {http://dx.doi.org/10.3390/s20102899}
 }
 @inproceedings{Lopez-PernasJGB20,
-  title        = {Ediphy: {A} modular and extensible open-source web authoring tool for the creation of interactive learning resources},
+  title        = {Ediphy: A modular and extensible open-source web authoring tool for the creation of interactive learning resources},
   author       = {Sonsoles López-Pernas and Alfonso Jiménez and Aldo Gordillo and Enrique Barra and Lourdes Marco and Juan Quemada},
   year         = 2020,
   booktitle    = {Proceedings of the 16th International Conference on Intelligent Environments, {IE} 2020, Madrid, Spain, July 20-23, 2020},
