Pequeños cambios en nomenclatura de tags courses

--- a/constants/publications.bib
+++ b/constants/publications.bib
@@ -51,7 +51,7 @@ doi = {10.1109/MIC.2023.3333199}
   doi={10.1109/MCG.2023.3244036}}
 
 @article{9914622,
-  author={López-Fernández, Daniel and Mayor, Jesus and Pérez, Jennifer and Gordillo, Aldo},
+  author={López-Fernández, Daniel and Mayor, Jesús and Pérez, Jennifer and Gordillo, Aldo},
   journal={IEEE Transactions on Games}, 
   title={Learning and Motivational Impact of Using a Virtual Reality Serious Video Game to Learn Scrum}, 
   year={2023},
@@ -695,7 +695,7 @@ doi = {10.1109/MIC.2023.3333199}
 }
 @inproceedings{inproceedings8067,
   title        = {EducaInternet: A platform to teach and learn safe and responsible use of digital technologies},
-  author       = {Barra, Enrique and Gordillo, Aldo and Eugenia Blas, Maria and Guijarro, Jesus and Vázquez, Ignacio},
+  author       = {Barra, Enrique and Gordillo, Aldo and Eugenia Blas, Maria and Guijarro, Jesús and Vázquez, Ignacio},
   year         = 2015,
   month        = 11,
   booktitle    = {Proceedings of the International Conference of Education, Research and Innovation (ICERI), At Seville},
@@ -1343,7 +1343,7 @@ doi = {10.1109/MIC.2023.3333199}
 }
 @book{book2847,
   title        = {Tangram: a robust and reliable directory system based on DHT algorithms},
-  author       = {Salvachúa, Joaquin and Mozo, Alberto and Alvarino, Daniel and Renero, Jesus and Agundez, Jose},
+  author       = {Salvachúa, Joaquin and Mozo, Alberto and Alvarino, Daniel and Renero, Jesús and Agundez, Jose},
   year         = 2007,
   month        = 1,
   pages        = {76--87},
